[gd_scene load_steps=51 format=3 uid="uid://b5s0pc6e66n5v"]

[ext_resource type="Script" path="res://scripts/player/network/network_player_controller.gd" id="1_ih3nq"]
[ext_resource type="Script" path="res://scripts/player/network/multiplayer_input.gd" id="2_nn87h"]
[ext_resource type="Texture2D" uid="uid://cpk30a8r26w5g" path="res://assets/sprites/knight.png" id="3_mmveb"]
[ext_resource type="PackedScene" uid="uid://b0aacwkeorblu" path="res://assets/asprite/player_animation.aseprite" id="3_ydte0"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="4_mlo2p"]
[ext_resource type="PackedScene" uid="uid://dw23by3xj4w4m" path="res://scenes/menu/player_hud.tscn" id="5_g7f2r"]
[ext_resource type="Script" path="res://scripts/player/network/multiplayer_visible_manager.gd" id="6_5egsx"]
[ext_resource type="Texture2D" uid="uid://dp4tl3guyyf1l" path="res://assets/sprites/particles/fog/fog_01.png" id="7_jbwfo"]
[ext_resource type="PackedScene" uid="uid://d2cfyvaw537hy" path="res://scenes/player/player_state_machine.tscn" id="7_uyu2t"]
[ext_resource type="PackedScene" uid="uid://deu8adkndmhuv" path="res://scenes/player/player_ray_cast_node.tscn" id="8_crsjd"]
[ext_resource type="PackedScene" uid="uid://e7du7xxjcdkb" path="res://scenes/player/player_timers.tscn" id="9_2m54n"]
[ext_resource type="PackedScene" uid="uid://xn1r4dtrbrq7" path="res://scenes/player/weapons.tscn" id="10_ka1dl"]
[ext_resource type="PackedScene" uid="uid://cvknrmxucecf2" path="res://scenes/state_based_camera_2d.tscn" id="13_7y56u"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_t6mc8"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:pseudo")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:position")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:velocity")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kgm8b"]
properties/0/path = NodePath("InputSynchronizer:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_eq0sc"]
atlas = ExtResource("3_mmveb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_euih6"]
atlas = ExtResource("3_mmveb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvckt"]
atlas = ExtResource("3_mmveb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qbp8"]
atlas = ExtResource("3_mmveb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4p6y"]
atlas = ExtResource("3_mmveb")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbdhl"]
atlas = ExtResource("3_mmveb")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cixn3"]
atlas = ExtResource("3_mmveb")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlmx5"]
atlas = ExtResource("3_mmveb")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mug6"]
atlas = ExtResource("3_mmveb")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fabi"]
atlas = ExtResource("3_mmveb")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kjed"]
atlas = ExtResource("3_mmveb")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36jc6"]
atlas = ExtResource("3_mmveb")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdrox"]
atlas = ExtResource("3_mmveb")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7dpx"]
atlas = ExtResource("3_mmveb")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyrft"]
atlas = ExtResource("3_mmveb")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkv65"]
atlas = ExtResource("3_mmveb")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_312ld"]
atlas = ExtResource("3_mmveb")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08i1f"]
atlas = ExtResource("3_mmveb")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajbxf"]
atlas = ExtResource("3_mmveb")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ducdv"]
atlas = ExtResource("3_mmveb")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq37r"]
atlas = ExtResource("3_mmveb")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jsyko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq0sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euih6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvckt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qbp8")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4p6y")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbdhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cixn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlmx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mug6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fabi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kjed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36jc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdrox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7dpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyrft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkv65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_312ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08i1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajbxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ducdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq37r")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn32t"]
size = Vector2(6, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_e5yko"]
radius = 5.52097

[sub_resource type="Curve" id="Curve_r5vj7"]
_data = [Vector2(0, 0.945055), 0.0, 4.97738, 0, 0, Vector2(0.75, 0), -0.982143, -0.982143, 0, 0, Vector2(1, 0.648352), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_cxxj1"]
curve = SubResource("Curve_r5vj7")

[sub_resource type="Curve" id="Curve_0foab"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.990909, -360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yqi2c"]
curve = SubResource("Curve_0foab")

[sub_resource type="Curve" id="Curve_6ccw3"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.936364, 0.692308), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pv6k5"]
curve = SubResource("Curve_6ccw3")

[sub_resource type="Gradient" id="Gradient_w0rk1"]
offsets = PackedFloat32Array(0, 0.994792)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_13eeu"]
gradient = SubResource("Gradient_w0rk1")

[sub_resource type="Curve" id="Curve_8op0b"]
_data = [Vector2(0.0136364, 0.197802), 0.0, 0.0, 0, 0, Vector2(0.977273, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ch6ti"]
curve = SubResource("Curve_8op0b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yg6rl"]
particle_flag_disable_z = true
angle_curve = SubResource("CurveTexture_yqi2c")
direction = Vector3(0, -15, 0)
spread = 10.0
initial_velocity_min = 40.0
initial_velocity_max = 55.0
angular_velocity_curve = SubResource("CurveTexture_pv6k5")
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_curve = SubResource("CurveTexture_ch6ti")
color_ramp = SubResource("GradientTexture1D_13eeu")
alpha_curve = SubResource("CurveTexture_cxxj1")

[node name="NetworkPlayer" type="CharacterBody2D" groups=["Players"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_ih3nq")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_t6mc8")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_kgm8b")
script = ExtResource("2_nn87h")

[node name="AnimatedSprite2D" parent="." instance=ExtResource("3_ydte0")]
position = Vector2(0, -10)
scale = Vector2(0.6205, 0.6205)

[node name="AnimatedSprite2D_old" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_jsyko")
animation = &"run"
autoplay = "idle"

[node name="head" type="CollisionShape2D" parent="."]
position = Vector2(-1.19209e-07, -12.5)
shape = SubResource("RectangleShape2D_dn32t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(0.72, 1.04)
shape = SubResource("CircleShape2D_e5yko")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -7)
zoom = Vector2(4, 4)
limit_bottom = 120
limit_smoothed = true
position_smoothing_enabled = true

[node name="PseudoLbl" type="Label" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_direction = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = -21.0
offset_right = 19.0
offset_bottom = -13.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_mlo2p")
theme_override_font_sizes/font_size = 7
text = "Master 8456"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 0
clip_text = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="PlayerHUD" parent="." instance=ExtResource("5_g7f2r")]
unique_name_in_owner = true

[node name="WallDustParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -6)
amount = 5
amount_ratio = 0.4572
process_material = SubResource("ParticleProcessMaterial_yg6rl")
texture = ExtResource("7_jbwfo")
lifetime = 0.5
randomness = 0.49

[node name="PowerManager" type="Node" parent="."]

[node name="Invisibility" type="Node" parent="PowerManager"]
unique_name_in_owner = true
script = ExtResource("6_5egsx")

[node name="StateMachine" parent="." instance=ExtResource("7_uyu2t")]

[node name="RayCastNode" parent="." instance=ExtResource("8_crsjd")]

[node name="Timers" parent="." instance=ExtResource("9_2m54n")]

[node name="Weapons" parent="." instance=ExtResource("10_ka1dl")]

[node name="StateCamera" parent="." instance=ExtResource("13_7y56u")]
visible = false
position = Vector2(-1, -12)
zoom = Vector2(4, 4)
position_smoothing_speed = 2.0
script = null

[connection signal="timeout" from="RespawnTimer" to="." method="_respawn"]
